--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,8 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation 'com.google.android.material:material:1.4.0'
+
+    // 単体テスト用
+    testImplementation 'junit:junit:'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
 }
